Fixing the height and spacing for the modules right controls.

--- a/styles/modules-right/_modulesRight.scss
+++ b/styles/modules-right/_modulesRight.scss
@@ -4,7 +4,7 @@ modules-right-container {
   background-color: $base-transparent;
   border: 2px solid $base;
   border-radius: $border-radius;
-  min-height: 600px;
+  min-height: 700px;
   padding: 20px;
   margin: 10px;
 }
